updated index page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="home-banner">
   <h1>
-    <span id="banner-typed-text">Find your dream castle</span>
+    <span id="banner-typed-text">Airbncastle</span>
   </h1>
 
-<button id="sweet-alert-demo" class="btn btn-primary"><%= link_to 'Show me', castles_path %></button>
+<button id="sweet-alert-demo" class="btn btn-primary"><%= link_to 'Show me', castles_path, id: "sweet-alert-demo" %></button>
 </div>
 
 
