--- a/app/views/castles/index.html.erb
+++ b/app/views/castles/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Castles#index</h1>
-<p>Find me in app/views/castles/index.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%), url('https://hdwallpaperim.com/wp-content/uploads/2017/08/25/455225-women-women_outdoors-landscape-robes-red_flowers-natural_light-lights-castle.jpg');">
+  <div class="banner-content">
+    <h1>Find your perfect escape</h1>
+    <p>with Airbncastle</p>
+  </div>
+</div>
+<div class="container">
+
+
+    <h1 class="text-left cards-header">Castles all around the world</h1>
+    <div class="row">
+      <% @castles.each do |castle| %>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('https://ae01.alicdn.com/kf/HTB1DltIeQfb_uJjSsD4q6yqiFXaU/castle-in-poland-city-building-landscape-wallpaper-KD723-living-Room-home-wall-modern-art-decor-wood.jpg');">
+          <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
+          <div class="card-description">
+            <h3><%= castle.name %></h3>
+            <p><%= castle.address %></p>
+          </div>
+        </div>
+        <div class="card-footer">
+          <div class="footer-links">
+            <span><%= castle.summary %></span>
+            <br>
+            <span><%= "$#{castle.price_per_night} per night   |" %></span>
+            <span><%= "   Free cancellation"%></span>
+          </div>
+          <p> <%= link_to "More info", castle_path(castle) %></p>
+        </div>
+      </div>
+      <% end %>
+    </div>
+  </div>
