--- a/app/views/castles/show.html.erb
+++ b/app/views/castles/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Castles#show</h1>
-<p>Find me in app/views/castles/show.html.erb</p>
+<div class="content">
+  <h1>Castles#show</h1>
+  <p>Find me in app/views/castles/show.html.erb</p>
+</div>
