started amending the create form

--- a/app/views/castles/new.html.erb
+++ b/app/views/castles/new.html.erb
@@ -1,4 +1,16 @@
-<h1>Castles#new</h1>
-<p>Find me in app/views/castles/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-offset-3">
 
-<%= render 'castle_form' %>
+  <div class="content">
+    <div class="form-header">
+      <h3>Hey! Let's get your castle listed.</h3>
+    </div>
+    <p class="light-caps">STEP 1</p>
+    <%= render 'castle_form' %>
+
+  </div>
+
+    </div>
+  </div>
+</div>
