--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,6 +7,14 @@
   padding-top: 40vh;
 }
 
+.container img {
+    margin-top: 20vh;
+    width: 100%;
+    height: auto;
+}
+
+
+
 .home-banner h1 {
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
