--- a/app/views/castles/new.html.erb
+++ b/app/views/castles/new.html.erb
@@ -1,16 +1,21 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-offset-3">
+    <div class="col-md-7 form-content">
 
-  <div class="content">
-    <div class="form-header">
-      <h3>Hey! Let's get your castle listed.</h3>
+      <div class="content">
+        <div class="form-header">
+          <h3>Hey! Let's get your castle listed.</h3>
+        </div>
+        <p class="light-caps">STEP 1</p>
+        <%= render 'castle_form' %>
+
+      </div>
+
     </div>
-    <p class="light-caps">STEP 1</p>
-    <%= render 'castle_form' %>
-
-  </div>
-
+    <div class="col-md-5">
+      <div class="picture-container">
+        <img src="https://cdn.pixabay.com/photo/2017/01/31/21/58/building-2027573_1280.png" />
+      </div>
     </div>
   </div>
 </div>
