--- a/app/views/castles/edit.html.erb
+++ b/app/views/castles/edit.html.erb
@@ -13,7 +13,8 @@
 
     </div>
     <div class="col-md-5">
-      <div class="new-castle-banner">
+      <div class="picture-container">
+        <img src="https://cdn.pixabay.com/photo/2017/01/31/21/58/building-2027573_1280.png" />
       </div>
     </div>
   </div>
