--- a/app/views/castles/edit.html.erb
+++ b/app/views/castles/edit.html.erb
@@ -14,7 +14,8 @@
     </div>
     <div class="col-md-5">
       <div class="picture-container">
-        <img src="https://cdn.pixabay.com/photo/2017/01/31/21/58/building-2027573_1280.png" />
+        <%= image_tag "castle_image.png", height: 50 %>
+
       </div>
     </div>
   </div>
