--- a/app/views/castles/show.html.erb
+++ b/app/views/castles/show.html.erb
@@ -1,4 +1,5 @@
 <div class="content">
   <h1>Castles#show</h1>
   <p>Find me in app/views/castles/show.html.erb</p>
+  <%= link_to "Book this Castle", new_castle_booking_path(@castle), class: "navbar-wagon-item navbar-wagon-link" %>
 </div>
