--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,6 +7,13 @@
   padding-top: 40vh;
 }
 
+.home-banner h1 {
+  font-weight: bold;
+  color: white;
+  text-shadow: 2px 2px rgba(208, 48, 48, 0.2);
+  margin-top: -120px;
+}
+
 .container img {
     margin-top: 20vh;
     width: 100%;
@@ -38,11 +45,6 @@
   margin-bottom: 30px;
 }
 
-.home-banner h1 {
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-  margin-top: 275px;
-}
 
 .banner {
   color: white;
