--- a/app/views/castles/show.html.erb
+++ b/app/views/castles/show.html.erb
@@ -1,14 +1,24 @@
-<div class="content">
-  <h1>Castles#show</h1>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path @castle.photo %>');">
+  <div class="banner-content">
+    <h1><%= @castle.name %></h1>
+  </div>
+  <div class="banner-button-wrapper">
+    <%= link_to edit_castle_path(@castle) do %>
+      <button class="btn btn-primary" id="edit_castle"> Edit Castle</button>
+    <% end %>
+    <%= link_to castle_path, method: :delete,
+        data: { confirm: "Are you sure?" } do %>
+      <button class="btn btn-primary" id="delete_castle">Delete Castle</button>
+    <% end %>
+  </div>
+</div>
+<div class="show_wrapper">
+
 </div>
 
-<div>
-<%= link_to "Delete Castle", castle_path, method: :delete,
-  data: { confirm: "Are you sure?" } %>
-</div>
-<div>
-  <%= link_to "Edit Castle", edit_castle_path(@castle) %>
-</div>
+
+
+
 
 <div class="container">
   Name: <%= @castle.name %> <br>
@@ -16,8 +26,8 @@
   Price per night: <%= @castle.price_per_night %> <br>
   <ul>
 
-  <% @castle.amenities.each do |a| %>
+    <% @castle.amenities.each do |a| %>
     <li><%=  a.name %></li>
-  <% end %>
+    <% end %>
   </ul>
 </div>
