--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
 
       <!-- Links when logged in -->
       <%= link_to "Add a Castle", new_castle_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "See My Bookings", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "See My Bookings", bookings_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
