--- a/app/views/castles/index.html.erb
+++ b/app/views/castles/index.html.erb
@@ -1,13 +1,13 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%), url('https://hdwallpaperim.com/wp-content/uploads/2017/08/25/455225-women-women_outdoors-landscape-robes-red_flowers-natural_light-lights-castle.jpg');">
+<!-- <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%), url('https://hdwallpaperim.com/wp-content/uploads/2017/08/25/455225-women-women_outdoors-landscape-robes-red_flowers-natural_light-lights-castle.jpg');">
   <div class="banner-content">
     <h1>Find your perfect escape</h1>
     <p>with Airbncastle</p>
   </div>
-</div>
+</div> -->
+
 <div class="container">
-
-
-    <h1 class="text-left cards-header">Castles all around the world</h1>
+  <div class="content">
+    <h1 class="text-left cards-header">Castles around the world</h1>
     <div class="row">
       <% @castles.each do |castle| %>
       <%= link_to castle_path(castle), :action => 'go' do %>
@@ -19,7 +19,7 @@
             <p><%= castle.summary %></p>
           </div>
         </div>
-      <% end %>
+        <% end %>
         <div class="card-footer">
           <div class="footer-links">
             <span><%= castle.address %></span>
@@ -33,3 +33,4 @@
       <% end %>
     </div>
   </div>
+</div>
