--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,11 @@
 // Specific CSS for your home-page
+.home-banner h1{
+  background-color: #d4b0b0;
+  opacity: 0.9;
+  height: 70px;
+  padding-top: 10px;
+  width: 300px;
+  margin-left: calc(50vw - 150px);
+  border-radius: 4px;
+}
+
