--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
 <div class="home-banner">
-  <h1>
-    <span id="banner-typed-text">Airbncastle</span>
-  </h1>
 
-<button id="sweet-alert-demo" class="btn btn-primary"><%= link_to 'Show me', castles_path, id: "sweet-alert-demo" %></button>
+      <span id="banner-typed-text text-center"><h1>Airbncastle</h1>
+    <br></span><button id="sweet-alert-demo" class="btn btn-primary"><%= link_to 'Show me', castles_path, id: "sweet-alert-demo" %></button>
+
 </div>
+<div class="home-box text-center">
+
+  </div>
