--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,6 +13,22 @@
 opacity: 0.9;
 }
 
+.card-booking {
+  height: 600px;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  background-size: cover !important;
+  background-position: center;
+  color: white;
+  position: relative;
+  border: none;
+  border-radius: 2px;
+  margin-top: calc(25vh - 70px);
+}
+
+.card-booking:hover {
+opacity: 0.9;
+}
+
 .cards-header {
   font-size: 20px;
   font-weight: bold;
@@ -49,6 +65,7 @@ opacity: 0.9;
   font-size: 14px;
   opacity: 0.7;
   font-weight: lighter;
+      margin-bottom: 0;
 }
 .card-link {
 
