--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -17,6 +17,32 @@
   font-size: 15px;
 }
 
+.light-caps-3 {
+  color: #BBBBBB;
+  font-size: 15px;
+  margin-bottom: 0;
+}
+
+.collection_check_boxes {
+  color: #3c3a3a;
+  font-size: 16px;
+  font-weight: 400;
+      margin-left: 10px;
+}
+
+.light-form-label {
+    color: #BBBBBB;
+  font-size: 15px;
+  margin: 0;
+}
+
+.col-form-label {
+  font-size: 1px;
+  border: none;
+  color: #F4F4F4;
+  margin-bottom: 0px;
+}
+
 .form-content {
   padding: 30px;
 }
@@ -27,7 +53,10 @@
 
 .form-control {
   font-family: Raleway;
+}
 
+.castle-form {
+  font-family: Raleway;
 }
 
 .form-header {
