updated homepage for cards and newsletter option

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,16 @@
 // Specific CSS for your home-page
+.wrapper-white h2 {
+  color: black;
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
+  padding-bottom: 40px;
+}
+
+.wrapper-white {
+  background: white;
+}
+
+.padded {
+  padding: 100px 0;
+}
