--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,91 @@
     <span id="banner-typed-text">Airbncastle</span>
   </h1>
 
-<button id="sweet-alert-demo" class="btn btn-primary"><%= link_to 'Show me', castles_path, id: "sweet-alert-demo" %></button>
+  <button id="sweet-alert-demo" class="btn btn-primary"><%= link_to 'Discover the magic', castles_path, id: "sweet-alert-demo" %></button>
+</div>
+
+<div class="container icons">
+  <div class="row">
+    <div class="col-xs-12 col-md-3">
+      <div class="icon-card text-center">
+        <%= image_tag "airbncastle.png", height: 70%>
+        <h2>Discover the world</h2>
+        <p>The earth is your new home.</p>
+      </div>
+    </div>
+    <div class="col-xs-12 col-md-3">
+      <div class="icon-card text-center">
+        <%= image_tag "airbncastle.png", height: 50 %>
+        <h2>Pay online</h2>
+        <p>No cash issues any more. </p>
+      </div>
+    </div>
+    <div class="col-xs-12 col-md-3">
+      <div class="icon-card text-center">
+        <%= image_tag "airbncastle.png", height: 50 %>
+        <h2>Meet people</h2>
+        <p>Discover new culture and lifestyle.</p>
+      </div>
+    </div>
+    <div class="col-xs-12 col-md-3">
+      <div class="icon-card text-center">
+        <%= image_tag "airbncastle.png", height: 50 %>
+        <h2>Share and love</h2>
+        <p>Join a community you will love.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="wrapper-white padded">
+  <h2>Castles of the day</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <%= link_to castle_path(Castle.find(2)), :action => 'go' do %>
+        <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path Castle.find(2).photo, height: 400, crop: :fill %>');">
+          <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
+          <div class="card-description">
+            <h3><%= Castle.find(2).name %></h3>
+            <p><%= Castle.find(2).summary %></p>
+          </div>
+        </div>
+        <% end %>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <%= link_to castle_path(Castle.find(3)), :action => 'go' do %>
+        <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path Castle.find(3).photo, height: 400, crop: :fill %>');">
+          <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
+          <div class="card-description">
+            <h3><%= Castle.find(3).name %></h3>
+            <p><%= Castle.find(3).summary %></p>
+          </div>
+        </div>
+        <% end %>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <%= link_to castle_path(Castle.find(1)), :action => 'go' do %>
+        <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path Castle.find(1).photo, height: 400, crop: :fill %>');">
+          <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
+          <div class="card-description">
+            <h3><%= Castle.find(1).name %></h3>
+            <p><%= Castle.find(1).summary %></p>
+          </div>
+        </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="newsletter text-center">
+  <h2>Get news from us</h2>
+  <p>Leave us your mail and get news from us</p>
+  <form class="form-inline">
+    <div class="form-group mx-sm-3 mb-2">
+      <input type="email" class="form-control" id="email" placeholder="bob@gmail.com">
+    </div>
+    <button type="submit" class="btn btn-primary mb-2">Subscribe</button>
+  </form>
 </div>
