--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,123 +1,112 @@
 <div class="home-banner">
-      <span id="banner-typed-text text-center"><h1>Airbncastle</h1>
+  <span id="banner-typed-text text-center"><h1>Airbncastle</h1>
     <br></span><button id="sweet-alert-demo" class="btn btn-primary"><%= link_to 'Discover the magic', castles_path, id: "sweet-alert-demo" %></button>
-</div>
-
-<div class="container icons">
-  <div class="row">
-    <div class="col-xs-12 col-md-3">
-      <div class="icon-card text-center">
-        <%= image_tag "airbncastle.png", height: 70%>
-        <h2>Discover the world</h2>
-        <p>The earth is your new home.</p>
-      </div>
-    </div>
-    <div class="col-xs-12 col-md-3">
-      <div class="icon-card text-center">
-        <%= image_tag "airbncastle.png", height: 50 %>
-        <h2>Pay online</h2>
-        <p>No cash issues any more. </p>
-      </div>
-    </div>
-    <div class="col-xs-12 col-md-3">
-      <div class="icon-card text-center">
-        <%= image_tag "airbncastle.png", height: 50 %>
-        <h2>Meet people</h2>
-        <p>Discover new culture and lifestyle.</p>
-      </div>
-    </div>
-    <div class="col-xs-12 col-md-3">
-      <div class="icon-card text-center">
-        <%= image_tag "airbncastle.png", height: 50 %>
-        <h2>Share and love</h2>
-        <p>Join a community you will love.</p>
-      </div>
-    </div>
   </div>
-</div>
 
-<div class="wrapper-white padded">
-  <h2>Castles of the day</h2>
-  <div class="container">
+  <div class="container icons">
     <div class="row">
-      <div class="col-xs-12 col-sm-4">
-        <%= link_to castle_path(Castle.find(2)), :action => 'go' do %>
-        <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path Castle.find(2).photo, height: 400, crop: :fill %>');">
-          <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
-          <div class="card-description">
-            <h3><%= Castle.find(2).name %></h3>
-            <p><%= Castle.find(2).summary %></p>
-          </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="icon-card text-center">
+          <%= image_tag "airbncastle.png", height: 70%>
+          <h2>Discover the world</h2>
+          <p>The earth is your new home.</p>
         </div>
-        <% end %>
       </div>
-      <div class="col-xs-12 col-sm-4">
-        <%= link_to castle_path(Castle.find(3)), :action => 'go' do %>
-        <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path Castle.find(3).photo, height: 400, crop: :fill %>');">
-          <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
-          <div class="card-description">
-            <h3><%= Castle.find(3).name %></h3>
-            <p><%= Castle.find(3).summary %></p>
-          </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="icon-card text-center">
+          <%= image_tag "airbncastle.png", height: 50 %>
+          <h2>Pay online</h2>
+          <p>No cash issues any more. </p>
         </div>
-m skh        <% end %>
       </div>
-      <div class="col-xs-12 col-sm-4">
-        <%= link_to castle_path(Castle.find(1)), :action => 'go' do %>
-        <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path Castle.find(1).photo, height: 400, crop: :fill %>');">
-          <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
-          <div class="card-description">
-            <h3><%= Castle.find(1).name %></h3>
-            <p><%= Castle.find(1).summary %></p>
-          </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="icon-card text-center">
+          <%= image_tag "airbncastle.png", height: 50 %>
+          <h2>Meet people</h2>
+          <p>Discover new culture and lifestyle.</p>
         </div>
-        <% end %>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="icon-card text-center">
+          <%= image_tag "airbncastle.png", height: 50 %>
+          <h2>Share and love</h2>
+          <p>Join a community you will love.</p>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-
-<div class="newsletter text-center">
-  <h2>Get news from us</h2>
-  <p>Leave us your mail and get news from us</p>
-  <form class="form-inline">
-    <div class="form-group mx-sm-3 mb-2">
-      <input type="email" class="form-control" id="email" placeholder="bob@gmail.com">
+  <div class="wrapper-white padded">
+    <h2>Castles of the day</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-4">
+          <%= link_to castle_path(Castle.find(2)), :action => 'go' do %>
+          <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path Castle.find(2).photo, height: 400, crop: :fill %>');">
+            <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
+            <div class="card-description">
+              <h3><%= Castle.find(2).name %></h3>
+              <p><%= Castle.find(2).summary %></p>
+            </div>
+          </div>
+          <% end %>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <%= link_to castle_path(Castle.find(3)), :action => 'go' do %>
+          <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path Castle.find(3).photo, height: 400, crop: :fill %>');">
+            <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
+            <div class="card-description">
+              <h3><%= Castle.find(3).name %></h3>
+              <p><%= Castle.find(3).summary %></p>
+            </div>
+          </div>
+          <% end %>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <%= link_to castle_path(Castle.find(1)), :action => 'go' do %>
+          <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path Castle.find(1).photo, height: 400, crop: :fill %>');">
+            <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
+            <div class="card-description">
+              <h3><%= Castle.find(1).name %></h3>
+              <p><%= Castle.find(1).summary %></p>
+            </div>
+          </div>
+          <% end %>
+        </div>
+      </div>
     </div>
-    <button type="submit" class="btn btn-primary mb-2">Subscribe</button>
-  </form>
-</div>
+  </div>
 
 
-<div class="row contact-page">
-  <div class="col-md-10">
+  <div class="newsletter text-center">
+    <h2>Get news from us</h2>
+    <p>Leave us your mail and get news from us</p>
+    <form class="form-inline">
+      <div class="form-group mx-sm-3 mb-2">
+        <input type="email" class="form-control" id="email" placeholder="bob@gmail.com">
+      </div>
+      <button type="submit" class="btn btn-primary mb-2">Subscribe</button>
+    </form>
+  </div>
+
+
+  <div class="text-center container mapping">
+    <p>Come say hi! You can find us here:</p>
+  </div>
     <div id="map" style="width: 100%; height: 400px;"></div>
 
-  </div>
-  <div class="col-md-2">
-   <div class="newsletter text-left">
-  <h2>Come say hi!</h2>
-  <h5>You can find us at:</h5>
-  <p>Le Wagon TLV</p>
-  <p>32 Ben Yehuda</p>
-</div>
 
 
-  </div>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 
-</div>
+  <script type="text/javascript">
+    var myLatlng = new google.maps.LatLng(32.076505, 34.768219);
 
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
-
-    <script type="text/javascript">
-      var myLatlng = new google.maps.LatLng(32.076505, 34.768219);
-
-      var myOptions = {
-        zoom: 16,
-        center: myLatlng,
-        scrollwheel: false,
-        mapTypeId: google.maps.MapTypeId.ROADMAP,
+    var myOptions = {
+      zoom: 16,
+      center: myLatlng,
+      scrollwheel: false,
+      mapTypeId: google.maps.MapTypeId.ROADMAP,
   styles: [] // TODO: replace [] with an array from https://snazzymaps.com/
 };
 
