--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,6 @@
 <div class="bookings-banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%), url('http://www.cowboysrvmart.com/assets/bigstock-Abstract-Gold-Background-72064195-c-r.jpg');">
   <div class="banner-content">
-    <h1>Your bookings</h1>
+    <h1>Let the magic begin</h1>
     <p>with Airbncastle</p>
   </div>
 </div>
@@ -10,7 +10,7 @@
   <div class="row">
     <% @bookings.each do |booking| %>
     <div class="col-xs-12 col-sm-6 col-md-4">
-      <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('https://img.wennermedia.com/article-leads-horizontal/gettyimages-519322618-066e466f-deaa-4bed-ab2f-1c674bdb7b1c.jpg');">
+      <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path booking.castle.photo, height: 400, crop: :fill %>');">
         <div class="card-category"><h5>ENTIRE CHATEAU</h5></div>
         <div class="card-description">
           <h3><%= booking.castle.name %></h3>
@@ -19,14 +19,18 @@
       </div>
       <div class="card-footer">
         <div class="footer-links">
-          <span><%= "#{booking.no_of_nights} nights   |" %></span>
+          <span><%= "#{booking.no_of_nights} nights, from #{booking.start_date.day} #{Date::MONTHNAMES[booking.start_date.month]} #{booking.start_date.year}    |" %></span>
           <span><%= "#{booking.no_confirmed_guests} guests"%></span>
+
         </div>
         <p> <%= link_to "More info", booking_path(booking) %></p>
       </div>
     </div>
     <% end %>
   </div>
+      <%= link_to "Back to castles", castles_path, class: "generic-link" %>
+    <br>
+    <%= link_to "Back to homepage", "/", class: "generic-link" %>
 </div>
 
 
