Placeholder commit for maps

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -108,7 +108,7 @@ m skh        <% end %>
 
 </div>
 
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+<!--     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script> -->
 
     <script type="text/javascript">
       var myLatlng = new google.maps.LatLng(32.076505, 34.768219);
