--- a/app/views/castles/show.html.erb
+++ b/app/views/castles/show.html.erb
@@ -20,8 +20,8 @@
   <div class="show_wrapper">
 
   </div>
-
-
+  <div id="map" style="width: 100%; height: 600px;"data-markers="<%= @markers.to_json %>"
+></div>
 
 
 
