--- a/app/views/castles/show.html.erb
+++ b/app/views/castles/show.html.erb
@@ -17,14 +17,6 @@
       <% end %>
     </div>
   </div>
-  <div class="show_wrapper">
-
-  </div>
-  <div id="map" style="width: 100%; height: 600px;"data-markers="<%= @markers.to_json %>"
-></div>
-
-
-
   <div class="container">
     Name: <%= @castle.name %> <br>
     Summary: <%= @castle.summary %> <br>
@@ -38,4 +30,26 @@
   </div>
   <%= link_to "Back to castles", castles_path, class: "btn btn-default" %>
 </div>
+    <div id="map" style="width: 100%; height: 400px;"></div>
 
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7E8a3m9Z3jp15dLjldxd9Es9-SJhct6Y"></script>
+
+<script type="text/javascript">
+  var myLatlng = new google.maps.LatLng(<%= @castle.latitude %>, <%=  @castle.longitude %>);
+
+  var myOptions = {
+    zoom: 16,
+    center: myLatlng,
+    scrollwheel: false,
+    mapTypeId: google.maps.MapTypeId.ROADMAP,
+  styles: [] // TODO: replace [] with an array from https://snazzymaps.com/
+};
+
+var map = new google.maps.Map(document.getElementById('map'), myOptions);
+var marker = new google.maps.Marker({
+  position: myLatlng,
+  map: map,
+  title: "You are here!"
+});
+</script>
