--- a/app/views/bookings/_booking_form.html.erb
+++ b/app/views/bookings/_booking_form.html.erb
@@ -6,13 +6,25 @@
     <%= f.input_field :start_date, class: 'form-control', as: :date, start_year: Date.today.year, placeholder: 'Start Date'  %>
   </div>
 
+
+
+  <p class="light-form-label">Number of nights</p>
   <div class="form-group">
-    <%= f.input_field :no_of_nights, class: 'form-control', as: :integer, collection: 1..15, placeholder: 'Number of nights'  %>
+    <%= f.input_field :no_of_nights, class: 'form-control', as: :integer, collection: 1..15, placeholder: '10'  %>
   </div>
 
+  <p class="light-form-label">Number of guests</p>
   <div class="form-group">
-    <%= f.input_field :no_confirmed_guests, class: 'form-control', as: :integer, collection: 1..15, placeholder: 'Number of guests' %>
+    <%= f.input_field :no_confirmed_guests, class: 'form-control', as: :integer, collection: 1..15, placeholder: '25' %>
   </div>
+  <% if params[:no_of_nights] == nil %>
+  <% else %>
+    <% if @unavailable %>
+    <div id="sweet-alert-no" class="btn btn-primary">Check availability</div>
+    <% else %>
+     <div id="sweet-alert-yes" class="btn btn-primary">Check availability</div>
+     <% end %>
+   <% end %>
 
   <%= f.submit%>
   <% end %>
