Re-added book button

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -86,7 +86,7 @@
   justify-content: space-between;
 }
 
-#edit_castle, #delete_castle {
+.show_button {
   background: #ffffff !important;
   color: #484848 !important;
   font-weight: 600 !important;
