--- a/app/views/castles/show.html.erb
+++ b/app/views/castles/show.html.erb
@@ -1,19 +1,22 @@
 
 <div class="content">
 
-  <%= link_to "Book this Castle", new_castle_booking_path(@castle), class: "navbar-wagon-item navbar-wagon-link" %>
+
 
   <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path @castle.photo %>');">
     <div class="banner-content">
       <h1><%= @castle.name %></h1>
     </div>
     <div class="banner-button-wrapper">
+      <%= link_to new_castle_booking_path(@castle) do %>
+      <button class="btn btn-primary show_button"> Book this Castle</button>
+      <% end %>
       <%= link_to edit_castle_path(@castle) do %>
-      <button class="btn btn-primary" id="edit_castle"> Edit Castle</button>
+      <button class="btn btn-primary show_button" id="edit_castle"> Edit Castle</button>
       <% end %>
       <%= link_to castle_path, method: :delete,
       data: { confirm: "Are you sure?" } do %>
-      <button class="btn btn-primary" id="delete_castle">Delete Castle</button>
+      <button class="btn btn-primary show_button" id="delete_castle">Delete Castle</button>
       <% end %>
     </div>
   </div>
