Added availability alert on booking form

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,3 +1,8 @@
+  <% if @unavailable %>
+    <div class="alert alert-warning">
+      <p>Castle unavailable on your chosen dates. Please try again.</p>
+    </div>
+  <% end %>
 <div class="container">
   <div class="row">
     <div class="col-md-7 form-content">
