--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -7,7 +7,7 @@
           <h3>It's official! Grab your crown, it's time to airbnCastle!</h3>
           <p><%= "You've reserved your stay at #{@booking.castle.name}:" %></p>
           <br>
-          <div class="container"><p><%= "#{Date::MONTHNAMES[@booking.start_date.month]} #{@booking.start_date.month}, #{@booking.start_date.year} " %></p>
+          <div class="container"><p><%= "#{Date::MONTHNAMES[@booking.start_date.month]} #{@booking.start_date.day}, #{@booking.start_date.year} " %></p>
                     <p><%= "#{@booking.no_of_nights} nights" %></p>
                     <p><%= "#{@booking.no_confirmed_guests} guests" %></p></div>
         </div>
