--- a/app/views/bookings/_booking_form.html.erb
+++ b/app/views/bookings/_booking_form.html.erb
@@ -1,7 +1,7 @@
 <div class="castle-form">
   <%= simple_form_for [@castle, @booking] do |f| %>
     <%= f.error_notification %>
-    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+    <%= f.error :base %>
 
   <p class="light-form-label">Start Date</p>
   <div class="form-group">
