--- a/app/views/castles/show.html.erb
+++ b/app/views/castles/show.html.erb
@@ -1,36 +1,44 @@
 
 <div class="content">
 
-  <%= link_to "Book this Castle", new_castle_booking_path(@castle), class: "navbar-wagon-item navbar-wagon-link" %>
-
-  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path @castle.photo %>');">
+  <%= link_to "Back to castles", castles_path, class: "btn btn-default show_button" %>
+  <div class=" show_banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%), url('<%= cl_image_path @castle.photo %>');">
     <div class="banner-content">
       <h1><%= @castle.name %></h1>
     </div>
     <div class="banner-button-wrapper">
+      <%= link_to new_castle_booking_path(@castle) do %>
+      <button class="btn btn-primary show_button"> Book this Castle</button>
+      <% end %>
       <%= link_to edit_castle_path(@castle) do %>
-      <button class="btn btn-primary" id="edit_castle"> Edit Castle</button>
+      <button class="btn btn-primary show_button" id="edit_castle"> Edit Castle</button>
       <% end %>
       <%= link_to castle_path, method: :delete,
       data: { confirm: "Are you sure?" } do %>
-      <button class="btn btn-primary" id="delete_castle">Delete Castle</button>
+      <button class="btn btn-primary show_button" id="delete_castle">Delete Castle</button>
       <% end %>
     </div>
   </div>
-  <div class="container">
-    Name: <%= @castle.name %> <br>
-    Summary: <%= @castle.summary %> <br>
-    Price per night: <%= @castle.price_per_night %> <br>
-    <ul>
-      <% @castle.amenities.each do |a| %>
-      <li><%= image_tag(a.photo); %><%=  a.name %></li>
-      <% end %>
-    </ul>
-
-  </div>
-  <%= link_to "Back to castles", castles_path, class: "btn btn-default" %>
 </div>
-    <div id="map" style="width: 100%; height: 400px;"></div>
+<div class="main_container">
+  <div class="details_grid">
+    <div class="details_list">
+      Name: <%= @castle.name %> <br>
+      Summary: <%= @castle.summary %> <br>
+      Price per night: <%= @castle.price_per_night %> <br>
+    </div>
+    <div class="amenities_grid">
+      <% @castle.amenities.each do |a| %>
+      <div> <%= image_tag(a.photo); %><%=  a.name %> </div>
+      <% end %>
+
+    </div>
+  </div>
+  <div>
+    <div id="map" ></div>
+  </div>
+</div>
+
 
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7E8a3m9Z3jp15dLjldxd9Es9-SJhct6Y"></script>
