--- a/app/assets/stylesheets/components/_show_container.scss
+++ b/app/assets/stylesheets/components/_show_container.scss
@@ -2,7 +2,7 @@
   display: flex;
 }
 
-#map {
+#map2 {
   flex: 0 0 450px;
   height: 100vh;
   position: sticky !important; /* !important to override Gmaps inline CSS */
