--- a/app/views/castles/show.html.erb
+++ b/app/views/castles/show.html.erb
@@ -26,9 +26,8 @@
       <h2> <%= @castle.summary %></h2>
       <p>Price per night: <%= @castle.price_per_night %> </p>
       <p>Number of guests: <%= @castle.no_of_guests %> </p>
-      <p>Number of bedrooms: <%= @castle.no_of_bedrooms %> </p>
+      <p>Bedrooms: <%= @castle.no_of_bedrooms %>   |   Bathrooms: <%= @castle.no_of_bathrooms %></p>
     </div>
-    <!-- </div> -->
     <div class="amenities_grid">
       <h2>Amenities</h2>
       <div class="amenity_items_wrapper">
