--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -80,3 +80,11 @@
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
 }
+
+.nav-text-center {
+  font-family: Dancing Script;
+  color: #ED5860;
+  font-size: 40px;
+  padding-left: 185px;
+  padding-top: 15px;
+}
