unnecessary frontend tweaks

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,30 +7,30 @@
     <div class="row">
       <div class="col-xs-12 col-md-3">
         <div class="icon-card text-center">
-          <%= image_tag "airbncastle.png", height: 70%>
-          <h2>Discover the world</h2>
-          <p>The earth is your new home.</p>
+          <div class="icon-pic"><%= image_tag "crown.png", height: 70, style: "padding-top: 20px" %></div>
+          <h2>Put a crown on it</h2>
+          <p>Feel like the royal you really are</p>
         </div>
       </div>
       <div class="col-xs-12 col-md-3">
         <div class="icon-card text-center">
-          <%= image_tag "airbncastle.png", height: 50 %>
-          <h2>Pay online</h2>
-          <p>No cash issues any more. </p>
+          <div class="icon-pic"><%= image_tag "wand.png", height: 70 %></div>
+          <h2>Play with magic</h2>
+          <p>Enchanted servants and quidditch pitches galore</p>
         </div>
       </div>
       <div class="col-xs-12 col-md-3">
         <div class="icon-card text-center">
-          <%= image_tag "airbncastle.png", height: 50 %>
-          <h2>Meet people</h2>
-          <p>Discover new culture and lifestyle.</p>
+          <div class="icon-pic"><%= image_tag "sword.png", height: 70 %></div>
+          <h2>Rule a kingdom</h2>
+          <p>Take over Winterfell as King in the North</p>
         </div>
       </div>
       <div class="col-xs-12 col-md-3">
         <div class="icon-card text-center">
-          <%= image_tag "airbncastle.png", height: 50 %>
-          <h2>Share and love</h2>
-          <p>Join a community you will love.</p>
+          <div class="icon-pic"><%= image_tag "arms.png", height: 70 %></div>
+          <h2>Start your dynasty</h2>
+          <p>Bulters, servants, you name it. </p>
         </div>
       </div>
     </div>
