--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -11,12 +11,14 @@
 
 .icon-card {
   font-family: Raleway;
+  height: 200px !important;
   padding: 0px;
   margin-top: 70px;
   margin-bottom: 70px;
   display: flex;
   text-align: center;
   flex-direction: column;
+align-items: center;
 }
 
 .icon-card h2 {
