--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -81,10 +81,16 @@
   border-top: 1px solid #E6E6E6;
 }
 
-.nav-text-center {
+.nav-text-center p{
   font-family: Dancing Script;
   color: #ED5860;
   font-size: 40px;
   padding-left: 185px;
   padding-top: 15px;
 }
+
+.nav-text-center {
+  a:hover {
+  text-decoration: none;
+  color: #ED5860;
+}}
