--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -30,9 +30,9 @@
     </div>
     <% end %>
   </div>
-      <%= link_to "Back to castles", castles_path, class: "btn btn-default" %>
+      <%= link_to "Back to castles", castles_path, class: "btn show_button" %>
     <br>
-    <%= link_to "Back to homepage", "/", class: "btn btn-default" %>
+    <%= link_to "Back to homepage", "/", class: "btn show_button" %>
 </div>
 
 
