--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -11,10 +11,9 @@
                     <p><%= "#{@booking.no_of_nights} nights" %></p>
                     <p><%= "#{@booking.no_confirmed_guests} guests" %></p></div>
         </div>
-        <hr />
-    <%= link_to "See all my bookings", bookings_path, class: "generic-link" %>
+    <%= link_to "See all my bookings", bookings_path, class: "btn show_button" %>
     <br>
-    <%= link_to "Back to homepage", "/", class: "generic-link" %>
+    <%= link_to "Back to homepage", "/", class: "btn show_button" %>
       </div>
 
     </div>
