--- a/app/assets/stylesheets/components/_show_container.scss
+++ b/app/assets/stylesheets/components/_show_container.scss
@@ -108,6 +108,8 @@
 }
 
 .show_button {
+  font-family: Raleway;
+  border-color: #f1eeee;
   background: #ffffff !important;
   color: #484848 !important;
   font-weight: 600 !important;
@@ -119,6 +121,11 @@
   line-height: 18px !important;
   width: auto !important;
   border-radius: 4px !important;
+}
+
+
+.show_button:hover {
+opacity: 0.7;
 }
 
 .show_banner {
