--- a/app/views/castles/show.html.erb
+++ b/app/views/castles/show.html.erb
@@ -7,14 +7,16 @@
       <h1><%= @castle.name %></h1>
     </div>
     <div class="banner-button-wrapper">
+      <%= link_to castles_path do %>
+      <button class="btn btn-primary show_button"> Back to Castles</button>
+      <% end %>
       <%= link_to new_castle_booking_path(@castle) do %>
       <button class="btn btn-primary show_button"> Book this Castle</button>
       <% end %>
       <%= link_to edit_castle_path(@castle) do %>
       <button class="btn  show_button" id="edit_castle"> Edit Castle</button>
       <% end %>
-      <%= link_to castle_path, method: :delete,
-      data: { confirm: "Are you sure?" } do %>
+      <%= link_to castle_path, method: :delete do %>
       <button class="btn  show_button" id="delete_castle">Delete Castle</button>
       <% end %>
     </div>
